--- a/public/manifest.json
+++ b/public/manifest.json
@@ -8,7 +8,7 @@
     "theme_color": "#ED1B23",
     "icons": [
         {
-            "src": "logo.PNG",
+            "src": "android-chrome-512x512.png",
             "sizes": "512x512",
             "type": "image/png",
             "purpose": "any maskable"
