--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,7 @@
         "guzzlehttp/guzzle": "^7.2",
         "harrygulliford/laravel-firebird": "^3.3",
         "jeroennoten/laravel-adminlte": "^3.15",
+        "kreait/firebase-php": "^6.9",
         "ladumor/laravel-pwa": "^0.0.4",
         "laravel/framework": "^9.19",
         "laravel/sanctum": "^3.0",
